[package]
name = "hns-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.51.1", features = [
    "Win32_Foundation",
    "Win32_System_HostComputeNetwork",
    "Win32_System_Com"
]}
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr ="0.1.16" 
hcs-rs = "0.9.1"
winutils-rs = "0.2.2"