[package]
name = "hcn"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_HostComputeNetwork",
    "Win32_System_Com"
]}
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
serde_repr ="0.1.16"
log = "0.4.14"

[dev-dependencies]
env_logger = "0.10"
